# seaborn_training

./: pyproject.toml
src/: seaborn_basics.ipynb
