[tool.poetry]
name = "seaborn-training"
version = "0.1.0"
description = ""
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"
packages = [{include = "seaborn_training"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
seaborn = "^0.12.2"
jupyterlab = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
